  InitializationData.

- Added SSL authorization as an alternative to username/password
  for Glacier2. To authorize with SSL, use the new operation
  Glacier2::Router::createSessionFromSecureConnection(). On the
  server side, the new interfaces Glacier2::SSLPermissionsVerifier and
  Glacier2::SSLSessionManager must be implemented.

- Added identityToString and stringToIdentity to the Communicator
  interface. If a string converter is configured, these functions
  must be used instead of the current static functions.

- Added ability to configure user-defined string and wstring 
  converters that are used during marshalling/unmarshalling to
  convert between UTF8 (as required by the Ice protocol) and the
  user's character set.

- Added operators <=, > and >= for Slice classes, proxies and
  structures.

- Added operation that allows a Glacier2 session to be destroyed from
  a backend server.

- It is now possible to recreate a new object adapter with the same 
  name as an old adapter once waitForDeactivate() has completed on the
  old adapter.

- Added new operation Communicator::createObjectAdapterWithRouter(),
  which creates a routed object adapter. An object adapter may now
  be associated with at most one router, which is defined using this
  operation or by setting the <AdapterName>.Router property. Also
  as a result of this change, the ObjectAdapter::addRouter() and
  ObjectAdapter::removeRouter() operations have been removed.

- Added property sets to IceGrid descriptors. Property sets allow you
  to define a set of properties in application, node and template
  descriptors. These property sets can then be referenced from the
  server, service and instance descriptors. See the IceGrid chapter in
  the Ice manual for more information.

- Changed the IceGrid::Admin::getApplicationDescriptor operation to
  return the application descriptor without performing any variable
  substitutions.

- Fixed a bug in the adaptive load policy implementation that could